--- a/index.html
+++ b/index.html
@@ -93,33 +93,60 @@
 </section>
 
 
-<section id="my-games">
-    <h2>🎮 My Games</h2>
-    <p>Here are some games I built using JavaScript!</p>
+<section class="profile-section" id="profile">
+  <div class="profile-container">
 
-    <div class="game-container">
-        <!-- Game 1 -->
-        <div class="game-card">
-            <h3>Game 1</h3>
-            <iframe src="your-game-url.html" class="game-frame"></iframe>
-            <p>info</p>
-            <div class="game-links">
-                <a href="https://your-github-link.com" target="_blank">GitHub Repo</a>
-                <a href="your-game-url.html" target="_blank">Live Demo</a>
-            </div>
-        </div>
-
-        <!-- Game 2 -->
-        <div class="game-card">
-            <h3>Pixel Runner</h3>
-            <iframe src="your-game-url.html" class="game-frame"></iframe>
-            <p>A simple side-scroller where you jump over obstacles!</p>
-            <div class="game-links">
-                <a href="https://your-github-link.com" target="_blank">GitHub Repo</a>
-                <a href="your-game-url.html" target="_blank">Live Demo</a>
-            </div>
-        </div>
+    <!-- EDUCATION -->
+    <div class="section-header">
+      <span class="pill">Education</span>
+      <h2>Education</h2>
     </div>
+
+    <div class="card">
+      <h3>B.Tech in Computer Science Engineering</h3>
+      <p class="sub">Ajeenkya DY Patil College, Pune</p>
+      <p class="muted">Expected Graduation: 2029</p>
+    </div>
+
+    <!-- SKILLS -->
+    <div class="section-header">
+      <span class="pill">Skills</span>
+      <h2>Skills I Have</h2>
+    </div>
+
+    <div class="skills-grid">
+      <div class="skill-card">
+        <h4>Languages & Frameworks</h4>
+        <div class="tags">
+          <span>HTML</span><span>CSS</span><span>JavaScript</span>
+          <span>React</span><span>Node.js</span>
+        </div>
+      </div>
+
+      <div class="skill-card">
+        <h4>Databases & Tools</h4>
+        <div class="tags">
+          <span>Git</span><span>GitHub</span>
+        </div>
+      </div>
+
+      <div class="skill-card">
+        <h4>UI & Styling</h4>
+        <div class="tags">
+          <span>Tailwind CSS</span><span>CSS Animations</span>
+        </div>
+      </div>
+
+      <div class="skill-card">
+        <h4>Other Skills</h4>
+        <div class="tags">
+          <span>Problem Solving</span><span>Teamwork</span>
+          <span>Communication</span>
+        </div>
+      </div>
+    </div>
+
+  </div>
 </section>
 
 
@@ -159,4 +186,5 @@
 
 
 </body>
+
 </html>
