--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="why-me-container">
         <div class="box box1">Html</div>
         <div class="box box2">Javascript</div>
-        <img src="" alt="Anime Character" class="anime-character">
+        <img src="images/Baki-PNG-Image-HD.png" alt="Anime Character" class="anime-character">
         <div class="box box3"> jQuery</div>
         <div class="box box4"> Bootstrap</div>
         <div class="box box5"> CSS</div>
@@ -188,4 +188,5 @@
 </body>
 
 </html>
+
 
