--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
         <div>
             <a href="#home">Home</a>
-            <a href="Why-me?.html">Why Me?</a>
+            <a href="#Why-me?">Why Me?</a>
             <a href="#about">My Work</a>
             <a href="#home" class="Brand">T𝖆𝖓𝖎𝖘𝖍 𝕯𝖊𝖙𝖊</a>
         </div>
@@ -188,6 +188,7 @@
 </body>
 
 </html>
+
 
 
 
