--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         With <strong>3 years</strong> of hands-on experience in coding and self-driven projects!
      </p>
      <p class="why-me-description2">
-        I have been learning and building frontend projects for 3 years, mastering HTML, CSS, JavaScript, Bootstrap, and jQuery. My passion for UI/UX helps me create visually appealing and user-friendly designs. I focus on writing clean, responsive, and interactive code to enhance user experience. Currently, I’m deepening my skills in Vanilla JavaScript and UI/UX to push web interactivity even further.
+        I have been learning and building frontend projects for a year now, mastering HTML, CSS, JavaScript, Bootstrap, and jQuery. My passion for UI/UX helps me create visually appealing and user-friendly designs. I focus on writing clean, responsive, and interactive code to enhance user experience. Currently, I’m deepening my skills in Vanilla JavaScript and UI/UX to push web interactivity even further.
      </p>
     <div class="why-me-container">
         <div class="box box1">Html</div>
@@ -188,6 +188,7 @@
 </body>
 
 </html>
+
 
 
 
