--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <section id="why-me">
     <h2>Why Choose Me?</h2>
     <p class="why-me-description1">
-        With <strong>3 years</strong> of hands-on experience in coding and self-driven projects!
+        With <strong>a year</strong> of hands-on experience in coding and self-driven projects!
      </p>
      <p class="why-me-description2">
         I have been learning and building frontend projects for a year now, mastering HTML, CSS, JavaScript, Bootstrap, and jQuery. My passion for UI/UX helps me create visually appealing and user-friendly designs. I focus on writing clean, responsive, and interactive code to enhance user experience. Currently, I’m deepening my skills in Vanilla JavaScript and UI/UX to push web interactivity even further.
@@ -188,6 +188,7 @@
 </body>
 
 </html>
+
 
 
 
